--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -2,11 +2,12 @@
     color: #8443df;
 }
 .regular-btn{
-    background-color: #8443df !important;
-    border-color: #8443df !important;
+    background-color: #8443df;
+    border-color: #8443df;
     padding: 8px 24px;
     margin-top: 10px;
     margin-right: 10px;
+    color: #fff;
 }
 .banner-container{
     background-color: #f7f7f7;
