--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -15,3 +15,16 @@
 .single-column:hover .project-img{
     transform: scale(1.04);
 }
+
+
+/* For Single Project Component */
+.single-project-container{
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2); 
+}
+.project-link a{
+    text-decoration: none;
+    margin-right: 10px;
+    background-color: rgb(36, 211, 6);
+    padding: 10px 20px;
+    color: #fff;
+}
