--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,10 +1,17 @@
 .projet-container{
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
+.project-row{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px 14px;
+    padding: 20px;
+}
 .project-img{
     width: 100%;
     height: 500px;
     transition: transform 0.3s linear;
+    object-fit: contain;
 }
 .single-column{
     transition: all 0.3s linear;
@@ -27,4 +34,18 @@
     background-color: rgb(36, 211, 6);
     padding: 10px 20px;
     color: #fff;
+}
+/* For Mobile */
+@media only screen and (max-width:600px){
+    .project-row{
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px 14px;
+        padding: 20px;
+    }
+    .project-img{
+        width: 100%;
+        height: 300px;
+        transition: transform 0.3s linear;
+        object-fit: cover;
+    }
 }
