--- a/src/components/Service/Service.css
+++ b/src/components/Service/Service.css
@@ -3,3 +3,9 @@
     padding: 16px;
     border-radius: 20px;
 }
+.service-column{
+    transition: all 0.3s linear;
+}
+.service-column:hover{
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+}
